Fix most remaining compile errors